--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,11 @@
     grid-template-columns: repeat(15, minmax(0, 1fr));
   }
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none !important;
+}
+.no-scrollbar {
+  -ms-overflow-style: none !important; /* IE and Edge */
+  scrollbar-width: none !important;    /* Firefox */
+}
