--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,15 @@
   scrollbar-width: none;
 }
 
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 /* Custom animation for week highlight */
 @keyframes weekBlink {
   0%, 100% {
